Removed six unnecessary classes, created two new classes- UnitHelper and XmlHelper, created the new GetCityListForPoland method in MainWeatherView class, improvemented three classes which create different types of files- csv, pdf and txt.

--- a/ProjectWeatherInformer-master/WeatherInformer/WeatherInformer.csproj
+++ b/ProjectWeatherInformer-master/WeatherInformer/WeatherInformer.csproj
@@ -55,10 +55,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CityData.cs" />
-    <Compile Include="Clouds.cs" />
     <Compile Include="CsvCreator.cs" />
     <Compile Include="CurrentWeather.cs" />
-    <Compile Include="DataSun.cs" />
     <Compile Include="MailSender.cs" />
     <Compile Include="MainWeatherView.cs">
       <SubType>Form</SubType>
@@ -72,16 +70,14 @@
     <Compile Include="Form5.Designer.cs">
       <DependentUpon>Form5.cs</DependentUpon>
     </Compile>
-    <Compile Include="Main.cs" />
     <Compile Include="OpenWeatherMapService.cs" />
     <Compile Include="PdfCreator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sun.cs" />
-    <Compile Include="City.cs" />
     <Compile Include="TxtCreator.cs" />
+    <Compile Include="UnitHelper.cs" />
     <Compile Include="ViewModels\MainWeatherViewModel.cs" />
-    <Compile Include="Wind.cs" />
+    <Compile Include="XmlHelper.cs" />
     <EmbeddedResource Include="MainWeatherView.resx">
       <DependentUpon>MainWeatherView.cs</DependentUpon>
     </EmbeddedResource>
